--- a/app/main.css
+++ b/app/main.css
@@ -9,10 +9,11 @@ body {
 }
 
 .notes {
-  margin: 0.5em;
+  margin: 0 auto;
   padding-left: 0;
   max-width: 10em;
   list-style: none;
+
 }
 
 .note {
