--- a/app/css/main.css
+++ b/app/css/main.css
@@ -2,15 +2,18 @@
 
 // New Styles
 
-* {
-  font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: blue;
+body {
+font-size:16px;
+background-color: white;
 }
 
 div#app {
   text-align: center;
+  font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+
 }
 
 .outer {
   display: inline-block;
+  margin-top: 6rem;
 }
