New image layouts on front page complete

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -17,7 +17,12 @@ div#app {
   display: inline-block;
 }
 
-
+.frontImage {
+  width: 60rem;
+  margin-top: 6rem;
+  margin-bottom: 6rem;
+  display: inline-block;
+}
 .containsTitle {
   height: 10rem;
   text-align: left;
