--- a/app/css/skeleton.css
+++ b/app/css/skeleton.css
@@ -416,3 +416,31 @@ there.
 
 /* Larger than Desktop HD */
 @media (min-width: 1200px) {}
+
+@media (max-width: 800px) {
+  .button,
+  button,
+  input[type="submit"],
+  input[type="reset"],
+  input[type="button"] {
+    visibility: hidden;
+    display: none;
+    height: 30px;
+    padding: 0 15px;
+    color: #555;
+    text-align: center;
+    font-size: 11px;
+    font-weight: 600;
+    line-height: 30px;
+    letter-spacing: .1rem;
+    text-transform: uppercase;
+    text-decoration: none;
+    white-space: nowrap;
+    background-color: transparent;
+    border-radius: 4px;
+    border: 0px solid #bbb;
+    cursor: pointer;
+    box-sizing: border-box; }
+
+    
+}
