--- a/app/skeleton.css
+++ b/app/skeleton.css
@@ -369,5 +369,27 @@ hr {
     cursor: pointer;
     box-sizing: border-box; }
 
+    .fixed {
+    	position: fixed;
+    	top: 0;
+    	height: 6rem;
+    	z-index: 1;
+      background-color: white;
+      text-align: center;
+
+
+    }
+
+    .containsReferences {
+      font-size: 1.2rem;
+      padding-right: 0;
+
+}
+
+.reference {
+  display: inline-block;
+  margin: 2rem;
+}
+
 
 }
