--- a/app/skeleton.css
+++ b/app/skeleton.css
@@ -144,7 +144,7 @@ input[type="button"] {
   background-color: transparent;
   border-radius: 4px;
   border: 1px solid #bbb;
-  cursor: pointer;
+  cursor:  default;
   box-sizing: border-box; }
 .button:hover,
 button:hover,
@@ -345,29 +345,7 @@ hr {
 @media (min-width: 1200px) {}
 
 @media (max-width: 800px) {
-  .button,
-  button,
-  input[type="submit"],
-  input[type="reset"],
-  input[type="button"] {
-    visibility: hidden;
-    display: none;
-    height: 30px;
-    padding: 0 15px;
-    color: #555;
-    text-align: center;
-    font-size: 11px;
-    font-weight: 600;
-    line-height: 30px;
-    letter-spacing: .1rem;
-    text-transform: uppercase;
-    text-decoration: none;
-    white-space: nowrap;
-    background-color: transparent;
-    border-radius: 4px;
-    border: 0px solid #bbb;
-    cursor: pointer;
-    box-sizing: border-box; }
+
 
     .fixed {
     	position: fixed;
